update assertions in unit test
Signed-off-by: Natasja Nortier <natasja.nortier@alliander.com>